[package]
name = "prost-types"
version = "0.11.1"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/tokio-rs/prost"
documentation = "https://docs.rs/prost-types"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language."
edition = "2021"
rust-version = "1.56"

[lib]
doctest = false

[features]
default = ["std"]
std = ["prost/std"]
json = ["prost/json", "serde", "serde_json"]

[dependencies]
base64 = "0.13"
bytes = { version = "1", default-features = false }
prost = { version = "0.11", path = "..", default-features = false, features = ["prost-derive"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"
